--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_gryoscope_test">GryoscopeTestActivity</string>
+    <string name="title_activity_finger_tapping">FingerTappingActivity</string>
 </resources>
