--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">ParkinsonsDiseaseApp</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_configuration">ConfigurationActivity</string>
-    <string name="title_activity_test">TestActivity</string>
-    <string name="title_activity_gryoscope_test">GyroscopeTestActivity</string>
-    <string name="title_activity_finger_tapping">FingerTappingActivity</string>
+    <string name="title_activity_configuration">Configuration</string>
+    <string name="title_activity_supination_pronation">Supination Pronation</string>
+    <string name="title_activity_resting_tremors">Resting Tremors</string>
+    <string name="title_activity_finger_tapping">Finger Tapping</string>
 </resources>
